--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1779,6 +1779,19 @@ input, select, textarea {
 				width: auto;
 			}
 
+
+/* Zoom Hover */
+	.zoom {
+	transition: transform .2s; /* Animation */
+	width: 200px;
+	height: 200px;
+	margin: 0 auto;
+	}
+
+	.zoom:hover {
+	transform: scale(2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+	}
+
 /* Button */
 
 	input[type="button"],
