--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2461,6 +2461,11 @@ input, select, textarea {
 				color: #fff;
 			}
 
+			#nav li.current3 a {
+				background: #98a3dd;
+				color: #fff;
+			}
+
 	.dropotron {
 		list-style: none;
 		background: #6B7770;
@@ -2642,6 +2647,70 @@ input, select, textarea {
 					color: #fff;
 					border-color: #616763;
 				}
+
+/* Banner Navies */
+
+#banner3 {
+	position: relative;
+	background-image: url("images/overlay.png"), url("images/overlay.png"), url("../../images/navies/navy_background.png");
+	background-position: top left, top left, center center;
+	background-repeat: repeat, repeat, no-repeat;
+	background-size: auto, auto, cover;
+	z-index: 1;
+	padding: 11em 0;
+}
+
+#banner3 .content {
+	position: relative;
+	background-color: rgba(21, 28, 23, 0.85);
+	background-image: url("images/overlay.png"), url("images/highlight.png");
+	background-position: top left, center center;
+	background-size: auto, 100% 250%;
+	background-repeat: repeat, no-repeat;
+	text-align: center;
+	margin: 0;
+	padding: 4em 0 3.5em 0;
+}
+
+	#banner3 .content h2 {
+		color: #fff;
+		font-size: 2.75em;
+		margin: 0 0 0.5em 0;
+	}
+
+	#banner3 .content p {
+		display: block;
+		font-family: 'Open Sans Condensed', sans-serif;
+		font-weight: 700;
+		text-transform: uppercase;
+		color: #9b9e9c;
+		font-size: 1.35em;
+		margin: 0 0 1.25em 0;
+	}
+
+	#banner3 .content .button {
+		-moz-transition: border-color .2s ease-in-out, color .2s ease-in-out;
+		-webkit-transition: border-color .2s ease-in-out, color .2s ease-in-out;
+		-ms-transition: border-color .2s ease-in-out, color .2s ease-in-out;
+		transition: border-color .2s ease-in-out, color .2s ease-in-out;
+		color: #b4b7b5;
+		background: transparent !important;
+		border: solid 4px #575d59;
+		border-color: rgba(87, 93, 89, 0.35);
+		font-size: 1.5em;
+	}
+
+		#banner3 .content .button:hover {
+			color: #e4e7e5;
+			border-color: rgba(87, 93, 89, 0.75);
+		}
+
+		#banner3 .content .button:active {
+			color: #fff;
+			border-color: #616763;
+		}
+
+
 
 /* Main */
 
